--- a/location2coordinate.ipynb
+++ b/location2coordinate.ipynb
@@ -251,7 +251,7 @@
     "    else:\n",
     "        return None\n",
     "\n",
-    "api_key = \"AIzaSyAVd95B2ATj4uQu_1NpLAw-tGs90R8c4II\"  # Replace with your actual API key\n",
+    "api_key = \"Your_API_code"  # Replace with your actual API key\n",
     "address = \"دانشگاه غیرانتفاعی خاتم تهران\"\n",
     "place_info = get_place_info(address, api_key)\n",
     "\n",
@@ -351,7 +351,7 @@
     "        return {\"name\": None, \"latitude\": None, \"longitude\": None, \"formatted_address\": None, \"place_id\": None, \"types\": None}\n",
     "\n",
     "# Your API key\n",
-    "api_key = \"AIzaSyAVd95B2ATj4uQu_1NpLAw-tGs90R8c4II\"  # Replace with your actual API key\n",
+    "api_key = \"Your_API_code\"  # Replace with your actual API key\n",
     "\n",
     "# File paths\n",
     "input_file = '/Users/ghost/Desktop/TeIAS/RA/RA_Map/modified_file.csv'\n",
@@ -475,7 +475,7 @@
     "        return {\"name\": None, \"latitude\": None, \"longitude\": None, \"formatted_address\": None, \"place_id\": None, \"types\": None}\n",
     "\n",
     "# Your API key\n",
-    "api_key = \"AIzaSyAVd95B2ATj4uQu_1NpLAw-tGs90R8c4II\"  # Replace with your actual API key\n",
+    "api_key = \"Your_API_code\"  # Replace with your actual API key\n",
     "\n",
     "# File paths\n",
     "input_file = '/Users/ghost/Desktop/TeIAS/RA/RA_Map/modified_file.csv'\n",
@@ -591,7 +591,7 @@
     "        return {\"name\": None, \"latitude\": None, \"longitude\": None, \"formatted_address\": None, \"place_id\": None, \"types\": None}\n",
     "\n",
     "# Your API key\n",
-    "api_key = \"AIzaSyAVd95B2ATj4uQu_1NpLAw-tGs90R8c4II\"  # Replace with your actual API key\n",
+    "api_key = \"Your_API_code\"  # Replace with your actual API key\n",
     "\n",
     "# File paths\n",
     "input_file = '/Users/ghost/Desktop/TeIAS/RA/RA_Map/third.xlsx'\n",
