--- a/location2coordinate.ipynb
+++ b/location2coordinate.ipynb
@@ -251,7 +251,7 @@
     "    else:\n",
     "        return None\n",
     "\n",
-    "api_key = \"Your_API_code"  # Replace with your actual API key\n",
+    "api_key = \"Your_API_code\"  # Replace with your actual API key\n",
     "address = \"دانشگاه غیرانتفاعی خاتم تهران\"\n",
     "place_info = get_place_info(address, api_key)\n",
     "\n",
